# Obstacle_Avoidance_Robotics_Project

./: README.md
notebook_ws/.ipynb_checkpoints/: default-checkpoint.ipynb
ros2_ws/src/linux_basics_project/: package.xml
ros2_ws/src/linux_basics_project/linux_basics_project/: obstacle_avoider.bash  robot_functions.bash  robot_interface.py  robot_statistics.bash  simple_patrol_real.bash
simulation_ws/install/turtlebot3/share/ament_index/resource_index/parent_prefix_path/: turtlebot3
simulation_ws/install/turtlebot3_msgs/share/turtlebot3_msgs/rust/: Cargo.toml
simulation_ws/install/turtlebot3_simulations/share/ament_index/resource_index/parent_prefix_path/: turtlebot3_simulations
simulation_ws/log/: latest_build
simulation_ws/src/fastbot_realrobot/launch/: main_fastbot_lab.launch.xml
