[package]
name = "turtlebot3_msgs"
version = "2.2.3"
edition = "2021"

[dependencies]
rosidl_runtime_rs = "0.3"
serde = { version = "1", optional = true, features = ["derive"] }
unique_identifier_msgs = "*"
action_msgs = "*"
std_msgs = "*"
builtin_interfaces = "*"

[features]
serde = ['dep:serde', 'rosidl_runtime_rs/serde', 'unique_identifier_msgs/serde', 'action_msgs/serde', 'std_msgs/serde', 'builtin_interfaces/serde']
